chore: 불필요 import 삭제, objectMapper 의존성 추가

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
 
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
 
     //기타
     compileOnly 'org.projectlombok:lombok'
